# pasclang

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  README-fr.md  README.md
include/: Pasclang.h
include/AST/: AST.h  PPPrinter.h  Types.h
include/LLVMBackend/: IRGenerator.h  IROptimizer.h  ObjectGenerator.h
include/Message/: BaseReporter.h  ConsoleReporter.h
include/Parsing/: Driver.h  Lexer.h  Location.h  Parser.h  Tokens.h
include/Semantic/: TypeChecker.h
include/UST/: UST.h  Untyper.h
rt/: CMakeLists.txt  libpasclang-rt.cpp
src/: CMakeLists.txt  main.cpp
src/AST/: PPPrinter.cpp  Types.cpp
src/LLVMBackend/: IRGenerator.cpp  IROptimizer.cpp  ObjectGenerator.cpp
src/Message/: ConsoleReporter.cpp
src/Parsing/: Driver.cpp  Lexer.cpp  Parser.cpp
src/Semantic/: TypeChecker.cpp
src/UST/: Untyper.cpp
test/: CMakeLists.txt  RunTests.cmake  array1.pp  array1.pp.out  array2.pp  arrayaccess.pp  condition.pp  danglingelse.pp  factorial1.pp  factorial1.pp.in  factorial1.pp.out  fibonacci1.pp  fibonacci1.pp.in  fibonacci1.pp.out  loop.pp  multirecursion.pp  nestedcomments.pp
test/more/: CMakeLists.txt  README.md  matmult.pp  mul2.pp
